-added header to user login info table, this also fixed date column wrapping

--- a/GraffitiTracker/src/main/webapp/resources/css/graffitiTracker.css
+++ b/GraffitiTracker/src/main/webapp/resources/css/graffitiTracker.css
@@ -239,6 +239,10 @@ body {
   font-size: 10px;
 }
 
+#userLoginsTableHeader {
+  font-weight: bold;
+}
+
 #userLoginsTable td:first-child, #userLoginsTable td:last-child {
   cursor: pointer; cursor: hand;
 }
